# espagent

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  __init__.py  __main__.py  agent.py  cli.py  middlewares.py  models.py  pyproject.toml
tests/: __init__.py  conftest.py  test_cli.py  test_tools.py  test_utils.py
tools/: __init__.py  mcp.py  memory.py  ssh.py
utils/: __init__.py  human_in_the_loop.py  state.py
