[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "espagent"
version = "0.1.0"
description = "ESP-IDF MCP agent"
requires-python = ">=3.10"
dependencies = [
    "langchain-openai",
    "langchain-core",
    "langchain",
    "langgraph",
    "pydantic",
    "langchain-mcp-adapters",
    "psycopg",
    "python-dotenv",
    "deepagents",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
espagent = "espagent.cli:main"

[tool.setuptools]
packages = ["espagent"]

[tool.setuptools.package-dir]
espagent = ""

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["espagent"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
